Details
-
Bug
-
Resolution: Fixed
-
Major
-
63,877
Description
The KVM testbot went from 30-40 minutes to 50-60 minutes with this change. VMPlayer bots now take longer than 60 minutes and thus time out and fail!
Test time history:
https://home.tfaber.net/~reactos/testtime.html
Comparison of affected tests:
https://home.tfaber.net/~reactos/6882-vs-6883-times.txt
A selection of the most-differing tests:
Test CreateDIBitmap completed in 4.09 seconds. | Test CreateDIBitmap completed in 32.82 seconds.
|
Test listview completed in 2.10 seconds. | Test listview completed in 12.21 seconds.
|
Test bitmap completed in 20.65 seconds. | Test bitmap completed in 182.27 seconds.
|
Test brush completed in 4.03 seconds. | Test brush completed in 36.09 seconds.
|
Test dc completed in 10.33 seconds. | Test dc completed in 92.10 seconds.
|
Test dib completed in 40.85 seconds. | Test dib completed in 236.52 seconds.
|
Test font completed in 21.79 seconds. | Test font completed in 181.43 seconds.
|
Test metafile completed in 11.83 seconds. | Test metafile completed in 96.67 seconds.
|
Test console completed in 6.10 seconds. | Test console completed in 18.14 seconds.
|
Test file completed in 4.57 seconds. | Test file completed in 16.55 seconds.
|
Test virtual completed in 4.83 seconds. | Test virtual completed in 25.72 seconds.
|
Test mpr completed in 1.92 seconds. | Test mpr completed in 11.70 seconds.
|
Test style completed in 30.95 seconds. | Test style completed in 56.88 seconds.
|
Test domdoc completed in 2.47 seconds. | Test domdoc completed in 15.18 seconds.
|
Test saxreader completed in 2.37 seconds. | Test saxreader completed in 18.25 seconds.
|
Test rtl completed in 2.88 seconds. | Test rtl completed in 21.80 seconds.
|
Test olefont completed in 1.88 seconds. | Test olefont completed in 10.96 seconds.
|
Test msg completed in 47.85 seconds. | Test msg completed in 177.51 seconds.
|
Some of these are probably unrelated and/or random, but many of these point in the same direction: GDI
Attachments
Issue Links
- blocks
-
CORE-7931 Make kernel32 / winsrv console CSR structures Win2k3-compliant
-
- Resolved
-