win32ss/user/winsrv/consrv/frontends/gui/conwnd.h
@@ -21,6 +21,17 @@
 #define PM_CONSOLE_BEEP         (WM_APP + 4)
 #define PM_CONSOLE_SET_TITLE    (WM_APP + 5)
 
+/*
+typedef struct _CONSOLE_FONT
+{
+    HFONT Font;
+    ULONG Flag;
+} CONSOLE_FONT, *PCONSOLE_FONT;
+*/
+#define FONT_NORMAL     0x00
+#define FONT_BOLD       0x01
+#define FONT_UNDERLINE  0x02
+#define FONT_MAXNO      0x04
 
 typedef struct _GUI_CONSOLE_DATA
 {
@@ -56,9 +67,9 @@ typedef struct _GUI_CONSOLE_DATA
 
 //  PVOID   ScreenBuffer;       /* Hardware screen buffer */
 
-    HFONT Font;
-    UINT CharWidth;
-    UINT CharHeight;
+    HFONT Font[FONT_MAXNO];
+    UINT CharWidth;     /* The character width and height should be the same for */
+    UINT CharHeight;    /* both normal and bold/underlined fonts...              */
 /*****************************************************/
 
     PCONSRV_CONSOLE Console;           /* Pointer to the owned console */
